--- a/packages/storybook-html/src/components/progression/progression.docs.mdx
+++ b/packages/storybook-html/src/components/progression/progression.docs.mdx
@@ -2,15 +2,22 @@ import { Meta, Story, Canvas } from '@storybook/addon-docs/blocks';
 import StatusBadge from '../../../.storybook/custom/components/StatusBadge';
 
 # Progression
+
 <StatusBadge.Stable />
+
+<a href="https://github.com/uq-its-ss/design-system/issues" class="uq-button uq-button--text" target="_blank">Check for open issues</a>
+
+
 
 ## Overview
 
 The Progression component is a progress indicator helping the user to complete a step by step process.
 
-## Base Example
 
-### Initial instance
+
+## Default example
+
+### a. Initial instance
 
 In the initial instance the component is in it's starting default stage.
 
@@ -33,7 +40,7 @@ In the initial instance the component is in it's starting default stage.
   </ul>
 ```
 
-### Middle instance
+### b. Middle instance
 
 An instance when a step is done partly but not completed.
 
@@ -71,7 +78,7 @@ An instance when a step is done partly but not completed.
   </ul>
 ```
 
-### Final instance
+### c. Final instance
 
 The instance when all steps are done and completed.
 
@@ -134,11 +141,15 @@ The instance when all steps are done and completed.
     </ul>
 ```
 
-## Use Case(s)
+
+
+## How and when to use
+
+- This component should be used only if the information is to be revealed in a progressive, step by step process.
 
 ### Adding sub steps between steps
 
-If there are sub steps between the main steps, follow the example html code below where the ul element class progression__sub-step and li child(s) with class progression&#95;&#95;bar is added.
+If there are sub steps between the main steps, follow the example html code below where the ul element class `uq-progression__sub-step` and li child with class `uq-progression__bar` is added.
 
 ```html
     <ul class="uq-progression">
@@ -160,10 +171,17 @@ If there are sub steps between the main steps, follow the example html code belo
     </ul>
 ```
 
-The html code above will display 2 sub steps as 2 li elements with class progression&#95;&#95;bar is present. The number of sub steps is determined by the number of li class progression&#95;&#95;bar elements within the parent class progression&#95;&#95;bar element.
+The html code above will display 2 sub steps as 2 li elements with class `uq-progression__bar` is present. The number of sub steps is determined by the number of li class `uq-progression__bar` elements within the parent class `uq-progression__sub-step` element.
 
-Note that adding the class is-complete to the child li element denotes that the sub step is done.
+Note that adding the class `is-complete` to the child li element denotes that the sub step is done.
 
 ### Breakpoints
 
-The progression hides the step marker label at viewports less than 640px.
+- The progression hides the step marker label at viewport widths less than 640px.
+
+
+
+## Related
+
+- Previous-next component could be used in conjunction with the Progression component.
+- Tabs and accordion components are alternate ways of laying out complex relations.
