--- a/packages/storybook-html/src/components/table/table.docs.mdx
+++ b/packages/storybook-html/src/components/table/table.docs.mdx
@@ -371,8 +371,8 @@ The table card stacks up when it hits screen viewport widths less than 640px.
 
 ## How and when to use
 
-- Don't use tables for layout purposes.
-- Use table for organising data with logical relationships.
+- Use the table component to let users compare information in rows and columns.
+- Never use the table component to layout content on a page. Instead, use the grid system.
 - Use 'Table scroll' example when there is lots of data, otherwise 'Table card'.
 
 
