template doc apply to table, progresion, prev-next

--- a/packages/storybook-html/src/components/previous-next/previous-next.docs.mdx
+++ b/packages/storybook-html/src/components/previous-next/previous-next.docs.mdx
@@ -1,7 +1,7 @@
 import { Meta, Story, Canvas } from '@storybook/addon-docs/blocks';
 import StatusBadge from '../../../.storybook/custom/components/StatusBadge';
 
-# Previous Next
+# Previous next
 
 <StatusBadge.Stable />
 
@@ -24,7 +24,7 @@ import StatusBadge from '../../../.storybook/custom/components/StatusBadge';
 An instance when only the next button is visible
 
 <Canvas withSource="none">
-  <Story id="components-previous-next--previous-next-first" />
+  <Story id="components-previous-next--previous-next-initial" />
 </Canvas>
 
 ```html
@@ -44,7 +44,7 @@ An instance when only the next button is visible
 An instance when both the previous and next buttons are visible
 
 <Canvas withSource="none">
-  <Story id="components-previous-next--previous-next" />
+  <Story id="components-previous-next--previous-next-middle" />
 </Canvas>
 
 ```html
@@ -65,7 +65,7 @@ An instance when both the previous and next buttons are visible
 An instance when only the previous button is visible
 
 <Canvas withSource="none">
-  <Story id="components-previous-next--previous-next-last" />
+  <Story id="components-previous-next--previous-next-final" />
 </Canvas>
 
 ```html
