--- a/packages/storybook-html/src/components/progression/progression.docs.mdx
+++ b/packages/storybook-html/src/components/progression/progression.docs.mdx
@@ -19,7 +19,7 @@ The Progression component is a progress indicator helping the user to complete a
 
 ### a. Initial instance
 
-In the initial instance the component is in it's starting default stage.
+In the initial instance, the component is in it's starting default stage.
 
 <Canvas withSource="none">
   <Story id="components-progression--progression-initial" />
