--- a/packages/storybook-html/src/components/form/form-validation.story.mdx
+++ b/packages/storybook-html/src/components/form/form-validation.story.mdx
@@ -1,6 +1,6 @@
 import { Meta, Story, Canvas } from '@storybook/addon-docs/blocks';
 
-<Meta title="Forms/Form validation" />
+<Meta title="Patterns/Form validation" />
 
 # Form validation
 
@@ -12,30 +12,6 @@ when paired with accessible form design, is an essential part of providing ease
 of use when completing forms. So here are some basic recommendations for form
 validation.
 
-## Glossary
-
-<dl>
-  <dt>Form validation messages</dt>
-  <dd>Intersection of <i>error summary</i> and <i>inline validation messages</i>.</dd>
-  <dt>Inline validation messages</dt>
-  <dd>Error messages, success messages, or feedback messages displayed within a form context.</dd>
-</dl>
-
-<details>
-  <summary>Read more</summary>
-
-  Throughout this document, references will be made to certain
-  [HTML DOM events](https://www.w3schools.com/jsref/dom_obj_event.asp) that
-  should be used to trigger validation functions.
-
-  | Event  | Description |
-  |--------|-------------|
-  | Input  | Triggered every time a user modifies a value. |
-  | Change | Triggered when the element is finished changing i.e. for text inputs, it's when the element loses focus. for other elements (select, checkbox, radio), it triggers right after the selection changes. |
-  | Blur   | When a form element loses focus. The value doesn’t have to be changed to trigger this event. |
-  | Submit | Triggers on form submit. |
-</details>
-
 ## Recommendations
 
 ### Include both an error summary _and_ inline validation messages
@@ -43,7 +19,7 @@ validation.
 Display an error summary _above/before_ the form when the user submits the form
 (_on submit_).
 
-<Story id="forms-form-errors--error-summary" />
+<Story id="components-form-errors--error-summary" />
 
 #### What should go into an error summary?
 
@@ -55,21 +31,22 @@ Display an error summary _above/before_ the form when the user submits the form
 The following example shows insertion of errors when the user tries to submit
 the form without data.
 
-<Story id="forms-form-errors--kitchen-sink" />
+<Story id="components-form-errors--kitchen-sink" />
 
 ---
 
 ### Validation messages must be highly visible
 
-According to [Neilsen](https://www.nngroup.com/articles/error-message-guidelines/)
-(2001), error messages should be visible and highly noticeable. He says that
-solely turning the field label red "...violates one of the oldest and simplest
-rules for making technology accessible to users with disabilities."
+> According to [Neilsen](https://www.nngroup.com/articles/error-message-guidelines/)
+> (2001), error messages should be visible and highly noticeable. He says that
+> solely turning the field label red "...violates one of the oldest and simplest
+> rules for making technology accessible to users with disabilities."
 
 Error messages should be attributable to the corresponding input element(s)
 using a combination of proximity, colour, content, and visual decorators. Error
 messages should be boldly distinguishable by ensuring enough contrast with
-surrounding elements.
+surrounding elements. Please make appropriate use of our form error styles to
+comply to this requirement.
 
 ---
 
@@ -139,16 +116,35 @@ different types of instantaneously feedback types and usage examples.
 | Scaled | Communicates validation result on a scaled classification or rating system. <a href="/?path=/docs/forms-working-examples--password-form">See password form working example</a>. | Password strength meter. |
 | Binary | Communicates true or false validation result. | Username availability. |
 
-## Implementation for web sites/apps
-  
-> <a href="/?path=/docs/forms-form-errors--error-summary">See Form errors</a>.
+## Glossary
 
-## Other form feedback
+<dl>
+  <dt>Form validation messages</dt>
+  <dd>Intersection of <i>error summary</i> and <i>inline validation messages</i>.</dd>
+  <dt>Inline validation messages</dt>
+  <dd>Error messages, success messages, or feedback messages displayed within a form context.</dd>
+</dl>
+
+### DOM object event terminology
+Throughout this document, references will be made to certain
+[HTML DOM events](https://www.w3schools.com/jsref/dom_obj_event.asp) that
+should be used to trigger validation functions.
+
+| Event  | Description |
+|--------|-------------|
+| Input  | Triggered every time a user modifies a value. |
+| Change | Triggered when the element is finished changing i.e. for text inputs, it's when the element loses focus. for other elements (select, checkbox, radio), it triggers right after the selection changes. |
+| Blur   | When a form element loses focus. The value doesn’t have to be changed to trigger this event. |
+| Submit | Triggers on form submit. |
+
+## Related
+  
+<a href="/?path=/docs/forms-form-errors--error-summary">See Form errors</a>.
 
 ### Form submission failure due to server-side or policy errors
 
-> <a href="/?path=/docs/components-alert--error">See Alerts</a> for more information
+<a href="/?path=/docs/components-alert--error">See Alerts</a> for more information
 
 ### Successful form submission feedback
 
-> <a href="/?path=/docs/components-alert--success">See Alerts</a> for more information
+<a href="/?path=/docs/components-alert--success">See Alerts</a> for more information
