--- a/packages/storybook-html/src/components/core/browser-support.story.mdx
+++ b/packages/storybook-html/src/components/core/browser-support.story.mdx
@@ -236,126 +236,85 @@ The following tables should be used as a general guide for focusing core testing
 
 Analytics: https://uq.edu.au | 01 Mar 2016 - 07 Mar 2017 (Sessions)
 
-Browser & OS
-	
+<table>
+    <caption>Browser & OS</caption>
+    <thead>
+        <tr>
+            <th></th>
+            <th>Windows</th>
+            <th>Macintosh</th>
+            <th>iOS</th>
+            <th>Android</th>
+        </tr>
+    </thead>
+    <tbody>
+        <tr>
+            <th>Chrome</th>
+            <td>2,700,667</td>
+            <td>400,294</td>
+            <td>31,251</td>
+            <td>251,165</td>
+        </tr>
+        <tr>
+            <th>Internet Explorer</th>
+            <td>1,011,160</td>
+            <td>N/A</td>
+            <td>N/A</td>
+            <td>N/A</td>
+        </tr>
+        <tr>
+            <th>Safari</th>
+            <td>N/A</td>
+            <td>512,440</td>
+            <td>452,158</td>
+            <td>N/A</td>
+        </tr>
+        <tr>
+            <th>Firefox</th>
+            <td>700,796</td>
+            <td>138,238</td>
+            <td>N/A</td>
+            <td>N/A</td>
+        </tr>
+        <tr>
+            <th>Edge</th>
+            <td>N/A</td>
+            <td>138,238</td>
+            <td>N/A</td>
+            <td>N/A</td>
+        </tr>
+    </tbody>
+</table>
 
-Windows
-	
-
-Macintosh
-	
-
-iOS
-	
-
-Android
-
-Chrome
-	
-
-2,700,667
-	
-
-400,294
-	
-
-31,251
-	
-
-251,165
-
-Internet Explorer
-	
-
-1,011,160
-	
-
-N/A
-	
-
-N/A
-	
-
-N/A
-
-Safari
-	
-
-N/A
-	
-
-512,440 
-	
-
-452,158
-	
-
-N/A
-
-Firefox
-	
-
-700,796
-	
-
-138,238
-	
-
-N/A
-	
-
-N/A
-
-Edge
-	
-
-154,408
-	
-
-N/A
-	
-
-N/A
-	
-
-N/A
-
-Notes: 
-
-    24 Operating systems and 92 Browsers are identified in the statistics, Stats past the ones displayed are not of a volume to warrant inclusion. 
-    N/A indicates combination is not available or not listed in the stats. 
+> ***Notes:***
+> 24 Operating systems and 92 Browsers are identified in the statistics, Stats past the ones displayed are not of a volume to warrant inclusion.
+> N/A indicates combination is not available or not listed in the stats. 
 
 
 
 Analytics: https://uq.edu.au | 01 Mar 2016 - 07 Mar 2017 (Sessions)
 
-Browser & OS
-	
-
-Windows 10
-	
-
-Windows 7
-	
-
-Windows 8.1
-	
-
-Windows XP
-
-Chrome
-	
-
-837,697 (18.27%)
-	
-
-1,499,037 (32.70%)
-	
-
-304,404 (6.64%)
-	
-
-25,941 (0.57%)
+<table>
+    <caption>Browser & OS</caption>
+    <thead>
+        <tr>
+            <th></th>
+            <th>Windows 10</th>
+            <th>Windows 7</th>
+            <th>Windows 8.1</th>
+            <th>Windows XP</th>
+        </tr>
+    </thead>
+    <tbody>
+        <tr>
+            <th>Chrome</th>
+            <td>837,697 (18.27%)</td>
+            <td>1,499,037 (32.70%)</td>
+            <td>304,404 (6.64%)</td>
+            <td>25,941 (0.57%)</td>
+        </tr>
+    </tbody>
+</table>
 
 ## References
 
