form, storybook-html: fix form validation docs regression

--- a/packages/storybook-html/src/components/form/form-controls.docs.mdx
+++ b/packages/storybook-html/src/components/form/form-controls.docs.mdx
@@ -310,7 +310,7 @@ Use a `fieldset` and `legend` to group and label your radio options.
 ```html
 <form>
   <fieldset>
-    <legend>What semester will you start?</legend>
+    <legend class="legend--error">What semester will you start?</legend>
     <input id="Semester1" type="radio" name="semester" class="input--error" aria-invalid="true" aria-describedby="semesterFeedback" />
     <label for="Semester2" class="label--error">Semester 1</label><br/>
     <input id="Semester2" type="radio" name="semester" class="input--error" aria-invalid="true" aria-describedby="semesterFeedback" />
