--- a/packages/storybook-html/src/components/form/form-error-summary.story.mdx
+++ b/packages/storybook-html/src/components/form/form-error-summary.story.mdx
@@ -6,6 +6,13 @@ import StatusBadge from '../../../.storybook/custom/components/StatusBadge';
 # Error summary
 <StatusBadge.Development />
 
+## What should go into an error summary?
+
+| Component element | Purpose |
+|-------------------|---------|
+| Title | Quickly informs the user of the action that has failed and the state of the form, e.g. "Your form could not be submitted, some form fields need correction". |
+| List of inline validation errors present | Read by the user and screen readers for an overview of form errors. Enables the user to skip directly to the fields that need correction. |
+
 export const ErrorSummary = () => {
   return `
     <div class="uq-grid uq-grid--golden uq-grid--full-width">
