--- a/packages/storybook-html/src/patterns/form-validation/form-validation.story.mdx
+++ b/packages/storybook-html/src/patterns/form-validation/form-validation.story.mdx
@@ -1,4 +1,5 @@
 import { Meta, Story, Canvas } from '@storybook/addon-docs/blocks';
+import baddestForm from './form-errors-kitchen-sink.html';
 
 <Meta title="Patterns/Form validation" />
 
@@ -19,19 +20,13 @@ validation.
 Display an error summary _above/before_ the form when the user submits the form
 (_on submit_).
 
-<Story id="components-form-errors--error-summary" />
+export const BadFormExample = () => {
+  return baddestForm;
+};
 
-#### What should go into an error summary?
-
-| Component element | Purpose |
-|-------------------|---------|
-| Title | Quickly informs the user of the action that has failed and the state of the form, e.g. "Your form could not be submitted, some form fields need correction". |
-| List of inline validation errors present | Read by the user and screen readers for an overview of form errors. Enables the user to skip directly to the fields that need correction. |
-
-The following example shows insertion of errors when the user tries to submit
-the form without data.
-
-<Story id="components-form-errors--kitchen-sink" />
+<Story name="Bad form submission example">
+  {BadFormExample.bind({})}
+</Story>
 
 ---
 
@@ -138,13 +133,14 @@ should be used to trigger validation functions.
 | Submit | Triggers on form submit. |
 
 ## Related
-  
-<a href="/?path=/docs/forms-form-errors--error-summary">See Form errors</a>.
+
+- [Form controls](/?path=/docs/components-form-controls--input-text)  
+- [Error summary](/?path=/docs/components-form-error-summary--error-summary)
 
 ### Form submission failure due to server-side or policy errors
 
-<a href="/?path=/docs/components-alert--error">See Alerts</a> for more information
+[See Alerts](/?path=/docs/components-alert--error) for more information
 
 ### Successful form submission feedback
 
-<a href="/?path=/docs/components-alert--success">See Alerts</a> for more information
+[See Alerts](/?path=/docs/components-alert--success) for more information
