--- a/packages/storybook-html/src/patterns/form-validation/form-validation.story.mdx
+++ b/packages/storybook-html/src/patterns/form-validation/form-validation.story.mdx
@@ -5,7 +5,7 @@ import passwordResetHTML from './examples/password-reset.html';
 import passwordResetInit from './examples/password-reset.es6';
 import './examples/password-reset.scss';
 
-<Meta title="Patterns/Form validation" />
+<Meta title="Patterns/Form validation" parameters={{ previewTabs: { canvas: { hidden: false } } }} />
 
 # Form validation
 
