--- a/packages/storybook-html/src/components/core/typography.story.mdx
+++ b/packages/storybook-html/src/components/core/typography.story.mdx
@@ -1,146 +1,114 @@
 import { Meta, Story, Canvas, Preview } from '@storybook/addon-docs/blocks';
 import './_fonts.scss';
-import StatusBadge from '../../../.storybook/custom/components/StatusBadge';
 
-<Meta title="Core/Typography" parameters={{ layout: 'fullscreen' }} />
+<Meta title="Core/Typography" />
 
 # Typography
 
-<StatusBadge.Review />
+Typography is the art and technique of arranging type (letters and characters). It sets the theme and mood of the design via the typeface family and font styles like size, weight, style, colour, line-height, letter-spacing etc on single and multiple lines.
 
-<a href="https://github.com/uq-its-ss/design-system/issues" class="uq-button uq-button--text" target="_blank">Check for open issues</a>
-
-## Objective
-
-Typography is the art and technique of arranging type (letters and characters). It sets the theme and mood of the design via the typeface family and font styles. 
-
-It's more than just the design of letters and characters but the arrangement of those letters and characters by the selection of font size, weight, style, colour, line-height, letter-spacing etc on single and multiple lines.
-
-## Default example
+## Font list
 
 The 3 typefaces used in the design system are Roboto, Merriweather & Montserrat.
 
-### Font list
+<table className="uqds-table uqds-table--card">
+  <tbody className="uqds-table__body">
+    <tr className="uqds-table__mobile-heading">
+      <th className="uqds-table__heading">Category</th>
+      <th className="uqds-table__heading">Font name</th>
+      <th className="uqds-table__heading">Usage</th>
+    </tr>
+    <tr className="uqds-table__row">
+      <td className="uqds-table__item" data-title="Category:">Primary</td>
+      <td className="uqds-table__item" data-title="Font name:">
+        <div class="uqds-fonts uqds-font--roboto">Roboto Regular 400</div>
+      </td>
+      <td className="uqds-table__item" data-title="Usage:">Default text</td>
+    </tr>
+    <tr className="uqds-table__row">
+      <td className="uqds-table__item" data-title="Category:">Primary</td>
+      <td className="uqds-table__item" data-title="Font name:">
+        <div class="uqds-fonts uqds-font--roboto uqds-font--500">Roboto Medium 500</div>
+      </td>
+      <td className="uqds-table__item" data-title="Usage:">Bold text</td>
+    </tr>
+    <tr className="uqds-table__row">
+      <td className="uqds-table__item" data-title="Category:">Primary</td>
+      <td className="uqds-table__item" data-title="Font name:">
+        <div class="uqds-fonts uqds-font--roboto uqds-font--italic">Roboto Regular 400 Italic</div>
+      </td>
+      <td className="uqds-table__item" data-title="Usage:">Emphasise</td>
+    </tr>
+    <tr className="uqds-table__row">
+      <td className="uqds-table__item" data-title="Category:">Primary</td>
+      <td className="uqds-table__item" data-title="Font name:">
+        <div class="uqds-fonts uqds-font--roboto uqds-font--500 uqds-font--italic">Roboto Medium 500 Italic</div>
+      </td>
+      <td className="uqds-table__item" data-title="Usage:">Emphasise</td>
+    </tr>
+    <tr className="uqds-table__row">
+      <td className="uqds-table__item" data-title="Category:">Secondary</td>
+      <td className="uqds-table__item" data-title="Font name:">
+        <div class="uqds-fonts uqds-font--merriweather uqds-font--italic">Merriweather Regular 400 Italic</div>
+      </td>
+      <td className="uqds-table__item" data-title="Usage:">Statement</td>
+    </tr>
+    <tr className="uqds-table__row">
+      <td className="uqds-table__item" data-title="Category:">Title</td>
+      <td className="uqds-table__item" data-title="Font name:">
+        <div class="uqds-fonts uqds-font--montserrat">Montserrat Medium 500</div>
+      </td>
+      <td className="uqds-table__item" data-title="Usage:">Page title</td>
+    </tr>
+  </tbody>
+</table>
 
-export const FontList = () => `
-  <div class="">
-    <h6>Primary font</h6>
-    <div class="uqds-fonts uqds-font--roboto uqds-font--300">Roboto Light 300 <em>italic</em>(deprecated)</div>
-    <div class="uqds-fonts uqds-font--roboto">Roboto Regular 400 <em>italic</em></div>
-    <div class="uqds-fonts uqds-font--roboto uqds-font--500">Roboto Medium 500 <em>italic</em></div>
-    <h6>Secondary font</h6>
-    <div class="uqds-fonts uqds-font--merriweather uqds-font--italic">Merriweather Regular 400</div>
-    <h6>H1 title font</h6>
-    <div class="uqds-fonts uqds-font--montserrat uqds-font--500">Montserrat Medium 500</div>
-  </div>
-  <br /><br />
-`;
+## Loading fonts
 
-<Story name="Font list">{FontList.bind({})}</Story>
+Copy the HTML or CSS lines below and paste it into your project to load design system fonts.
 
-### Elements
+### HTML
+```html
+<link rel="stylesheet" type="text/css" href="https://static.uq.net.au/v13/fonts/Roboto/roboto.css" />
+<link rel="stylesheet" type="text/css" href="https://static.uq.net.au/v13/fonts/Merriweather/merriweather.css" />
+<link rel="stylesheet" type="text/css" href="https://static.uq.net.au/v13/fonts/Montserrat/montserrat.css" />
+```
 
-export const Elements = () => `
-  <div class="">
-      <h1>Heading level 1 (h1)</h1>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse interdum nulla vitae consectetur interdum. Quisque sed nibh in lorem malesuada egestas. Integer varius orci in ligula mollis sodales. Sed dapibus rutrum finibus. Vestibulum tellus velit, dictum eu cursus at, luctus condimentum leo. Vestibulum malesuada consectetur sem, nec fermentum nibh molestie at. Pellentesque posuere enim leo, in blandit sem interdum ut. Duis lobortis lectus vitae mi pellentesque sagittis. Fusce eget eros sit amet enim placerat commodo quis id nisl.</p>
-      <h2>Heading level 2 (h2)</h2>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse interdum nulla vitae consectetur interdum. Quisque sed nibh in lorem malesuada egestas. Integer varius orci in ligula mollis sodales. Sed dapibus rutrum finibus. Vestibulum tellus velit, dictum eu cursus at, luctus condimentum leo. Vestibulum malesuada consectetur sem, nec fermentum nibh molestie at. Pellentesque posuere enim leo, in blandit sem interdum ut. Duis lobortis lectus vitae mi pellentesque sagittis. Fusce eget eros sit amet enim placerat commodo quis id nisl.</p>
-      <blockquote>Fusce vitae tortor consequat, consectetur metus id, ultricies risus. Nulla pharetra ornare sem, at placerat nisi sollicitudin bibendum. Nulla in pulvinar augue. Etiam tincidunt leo egestas congue congue. Phasellus feugiat mattis finibus. Duis bibendum pharetra risus, non aliquet augue consequat sit amet. Vestibulum sit amet enim fermentum, fringilla massa nec, facilisis augue.</blockquote>
-      <h3>Heading level 3 (h3)</h3>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse interdum nulla vitae consectetur interdum. Quisque sed nibh in lorem malesuada egestas. Integer varius orci in ligula mollis sodales. Sed dapibus rutrum finibus. Vestibulum tellus velit, dictum eu cursus at, luctus condimentum leo. Vestibulum malesuada consectetur sem, nec fermentum nibh molestie at. Pellentesque posuere enim leo, in blandit sem interdum ut. Duis lobortis lectus vitae mi pellentesque sagittis. Fusce eget eros sit amet enim placerat commodo quis id nisl.</p>
-      <h4>Heading level 4 (h4)</h4>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse interdum nulla vitae consectetur interdum. Quisque sed nibh in lorem malesuada egestas. Integer varius orci in ligula mollis sodales. Sed dapibus rutrum finibus. Vestibulum tellus velit, dictum eu cursus at, luctus condimentum leo. Vestibulum malesuada consectetur sem, nec fermentum nibh molestie at. Pellentesque posuere enim leo, in blandit sem interdum ut. Duis lobortis lectus vitae mi pellentesque sagittis. Fusce eget eros sit amet enim placerat commodo quis id nisl.</p>
-      <h5>Heading level 5 (h5)</h5>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse interdum nulla vitae consectetur interdum. Quisque sed nibh in lorem malesuada egestas. Integer varius orci in ligula mollis sodales. Sed dapibus rutrum finibus. Vestibulum tellus velit, dictum eu cursus at, luctus condimentum leo. Vestibulum malesuada consectetur sem, nec fermentum nibh molestie at. Pellentesque posuere enim leo, in blandit sem interdum ut. Duis lobortis lectus vitae mi pellentesque sagittis. Fusce eget eros sit amet enim placerat commodo quis id nisl.</p>
-      <h6>Heading level 6 (h6)</h6>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse interdum nulla vitae consectetur interdum. Quisque sed nibh in lorem malesuada egestas. Integer varius orci in ligula mollis sodales. Sed dapibus rutrum finibus. Vestibulum tellus velit, dictum eu cursus at, luctus condimentum leo. Vestibulum malesuada consectetur sem, nec fermentum nibh molestie at. Pellentesque posuere enim leo, in blandit sem interdum ut. Duis lobortis lectus vitae mi pellentesque sagittis. Fusce eget eros sit amet enim placerat commodo quis id nisl.</p>
-      <blockquote>Fusce vitae tortor consequat, consectetur metus id, ultricies risus. Nulla pharetra ornare sem, at placerat nisi sollicitudin bibendum. Nulla in pulvinar augue. Etiam tincidunt leo egestas congue congue. Phasellus feugiat mattis finibus. Duis bibendum pharetra risus, non aliquet augue consequat sit amet. Vestibulum sit amet enim fermentum, fringilla massa nec, facilisis augue.</blockquote>
-      <p>Praesent risus libero, viverra eu libero ultricies, tincidunt posuere sem. Phasellus eros mauris, commodo at orci ut, dictum consectetur sem. Sed urna elit, faucibus et feugiat tincidunt, ultrices at dui. Nulla facilisi. Praesent eget urna eget odio ullamcorper ornare et ut arcu. Integer mollis risus sit amet gravida congue. Praesent eget efficitur erat, ut sodales magna. Nulla at ullamcorper tortor. Aenean et porta nulla. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Nullam aliquet augue eu elementum pretium. Etiam ac feugiat orci, ac molestie tortor. In ac suscipit sapien. Donec tempus mauris id ex tristique convallis nec sit amet ex. Integer semper porttitor sapien ut interdum.</p>
-  </div>
-`;
+### CSS/Sass
+```css
+@import url('https://static.uq.net.au/v13/fonts/Roboto/roboto.css');
+@import url('https://static.uq.net.au/v13/fonts/Merriweather/merriweather.css');
+@import url('https://static.uq.net.au/v13/fonts/Montserrat/montserrat.css');
+```
 
-<Story name="Elements">{Elements.bind({})}</Story>
+## Font size
 
-### Utilities
+<table className="uqds-table uqds-table--card">
+  <tbody className="uqds-table__body">
+    <tr className="uqds-table__mobile-heading">
+      <th className="uqds-table__heading">rem</th>
+      <th className="uqds-table__heading">px</th>
+      <th className="uqds-table__heading">Usage</th>
+    </tr>
+    <tr className="uqds-table__row">
+      <td className="uqds-table__item" data-title="rem:">0.75</td>
+      <td className="uqds-table__item" data-title="px:">12</td>
+      <td className="uqds-table__item" data-title="Usage:">Body xsmall</td>
+    </tr>
+    <tr className="uqds-table__row">
+      <td className="uqds-table__item" data-title="rem:">0.875</td>
+      <td className="uqds-table__item" data-title="px:">14</td>
+      <td className="uqds-table__item" data-title="Usage:">Body small</td>
+    </tr>
+    <tr className="uqds-table__row">
+      <td className="uqds-table__item" data-title="rem:">1</td>
+      <td className="uqds-table__item" data-title="px:">16</td>
+      <td className="uqds-table__item" data-title="Usage:">Body</td>
+    </tr>
+  </tbody>
+</table>
 
-export const textColorUtils = () => {
-  return `
-    <div class="uqds-body__text-utility__container">
-      <div class="uqds-body__text-utility black text--reverse">.text--reverse</div>
-      <div class="uqds-body__text-utility black text--white">.text--white</div>
-      <div class="uqds-body__text-utility text--primary">.text--primary</div>
-      <div class="uqds-body__text-utility text--primary-light">.text--primary-light</div>
-      <div class="uqds-body__text-utility text--purple-50">.text--purple-50</div>
-      <div class="uqds-body__text-utility text--grey-25">.text--grey-25</div>
-      <div class="uqds-body__text-utility text--grey-60">.text--grey-60</div>
-      <div class="uqds-body__text-utility text--grey-80">.text--grey-80</div>
-      <div class="uqds-body__text-utility text--grey-90">.text--grey-90</div>
-      <div class="uqds-body__text-utility text--black">.text--black</div>
-      <div class="uqds-body__text-utility text--red">.text--red</div>
-    </div>
-  `;
-};
-
-<Story name="Text colours">{textColorUtils.bind({})}</Story>
-
-export const textSizeUtils = () => {
-  return `
-    <div class="uqds-body__text-utility__container">
-      <div class="uqds-body__text-utility text--xxxxl">.text--xxxxl</div>
-      <div class="uqds-body__text-utility text--xxxl">.text--xxxl</div>
-      <div class="uqds-body__text-utility text--xxl">.text--xxl</div>
-      <div class="uqds-body__text-utility text--xl">.text--xl</div>
-      <div class="uqds-body__text-utility text--l">.text--l</div>
-      <div class="uqds-body__text-utility text--m">.text--m</div>
-      <div class="uqds-body__text-utility text--s">.text--s</div>
-      <div class="uqds-body__text-utility text--xs">.text--xs</div>
-    </div>
-  `;
-};
-
-<Story name="Text size">{textSizeUtils.bind({})}</Story>
-
-export const textWeightUtils = () => {
-  return `
-    <div class="uqds-body__text-utility__container">
-      <div class="uqds-body__text-utility text--weight-normal">.text--weight-normal</div>
-      <div class="uqds-body__text-utility text--weight-bold">.text--weight-bold</div>
-      <div class="uqds-body__text-utility text--weight-medium">.text--weight-medium (same as bold)</div>
-    </div>
-  `;
-};
-
-<Story name="Text weight">{textWeightUtils.bind({})}</Story>
-
-export const textAlignUtils = () => {
-  return `
-    <div class="uqds-body__text-utility__container uqds-body__text-utility__container--flex-left">
-      <div class="uqds-body__text-utility uqds-body__text-utility--align text--left"><b>.text--left&nbsp;&nbsp;</b><span>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</span></div>
-      <div class="uqds-body__text-utility uqds-body__text-utility--align text--right"><b>.text--right&nbsp;&nbsp;</b><span>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</span></div>
-      <div class="uqds-body__text-utility uqds-body__text-utility--align text--center"><b>.text--center&nbsp;&nbsp;</b><span>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</span></div>
-    </div>
-  `;
-};
-
-<Story name="Text alignment">{textAlignUtils.bind({})}</Story>
-
-export const textPrettyUtils = () => {
-  return `
-    <div class="uqds-body__text-utility__container text--xl">
-      <div class="uqds-body__text-utility"><span class="text--uppercase">Uppercase</span> &nbsp;(.text--uppercase)</div>
-      <div class="uqds-body__text-utility text--accent">.text--accent</div>
-      <div class="uqds-body__text-utility text--shadow">.text--shadow</div>
-    </div>
-  `;
-};
-
-<Story name="Text prettiers">{textPrettyUtils.bind({})}</Story>
-
-
-## Variant example
-
-### Title wrap
+## Title wrap
 
 export const TitleWrap = () => `
   <h1>This is an example of a very long title that wraps. This is an example of a very long title that wraps.</h1>
@@ -149,27 +117,7 @@ export const TitleWrap = () => `
 <Story name="Title Wrap">{TitleWrap.bind({})}</Story>
 
 
-## How and when to use
-
-### Loading fonts
-
-Copy the HTML or CSS lines below and paste it into your project to load design system fonts.
-
-#### HTML
-```html
-<link rel="stylesheet" type="text/css" href="https://static.uq.net.au/v13/fonts/Roboto/roboto.css" />
-<link rel="stylesheet" type="text/css" href="https://static.uq.net.au/v13/fonts/Merriweather/merriweather.css" />
-<link rel="stylesheet" type="text/css" href="https://static.uq.net.au/v13/fonts/Montserrat/montserrat.css" />
-```
-
-#### CSS/Sass
-```css
-@import url('https://static.uq.net.au/v13/fonts/Roboto/roboto.css');
-@import url('https://static.uq.net.au/v13/fonts/Merriweather/merriweather.css');
-@import url('https://static.uq.net.au/v13/fonts/Montserrat/montserrat.css');
-```
-
-### Base typography palette
+## Base typography palette
 
 <table className="uqds-table uqds-table--card uqds-table--colour">
   <tbody className="uqds-table__body">
